<resources>
    <string name="app_name">Formulario</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="signup">Signup</string>
    <string name="do_you_have_an_account_login">Do you have an account? Login</string>
    <string name="registered_users">Registered Users</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="exit">Exit</string>
    <string name="hello_user">Hello! User</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_register_now">New User? Register now</string>
</resources>